<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiant"
    android:orientation="vertical"
    tools:context="pk.edu.pucit.calculator.MainActivity">

    <TextView
        android:id="@+id/tv_equation"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="bottom|end"
        android:text="@string/equation"
        android:textColor="@color/white"
        android:textSize="9pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/result"
        android:textColor="@color/white"
        android:textSize="18pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_equation" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="30dp"
        android:background="#faa2a4"
        app:layout_constraintBottom_toTopOf="@+id/tv_equation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:paddingTop="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_result">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ac"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="clear"
                android:text="@string/ac"
                android:textColor="@color/white"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/divide"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="concat"
                android:text="@string/divide"
                android:textColor="@color/white"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/multiply"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="concat"
                android:text="@string/multiply"
                android:textColor="@color/white"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/subtract"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="concat"
                android:text="@string/subtract"
                android:textColor="@color/white"
                android:textSize="10pt" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/seven"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="concat"
                android:text="@string/seven"
                android:textColor="@color/white"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/eight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="concat"
                android:text="@string/eight"
                android:textColor="@color/white"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/nine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="concat"
                android:text="@string/nine"
                android:textColor="@color/white"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="concat"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="10pt" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/four"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="concat"
                android:text="@string/four"
                android:textColor="@color/white"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/five"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="concat"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/six"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="concat"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/mod"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="concat"
                android:text="@string/mod"
                android:textColor="@color/white"
                android:textSize="10pt" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/one"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="concat"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/two"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="concat"
                android:text="@string/two"
                android:textColor="@color/white"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/three"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="concat"
                android:text="@string/three"
                android:textColor="@color/white"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/del"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="delete_char"
                android:text="@string/del"
                android:textColor="@color/white"
                android:textSize="10pt" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/double_zero"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="concat"
                android:text="@string/double_zero"
                android:textColor="@color/white"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/zero"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="concat"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/point"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="concat"
                android:text="@string/point"
                android:textColor="@color/white"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/equals"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="equate"
                android:text="@string/equals"
                android:textColor="@color/white"
                android:textSize="10pt" />


        </LinearLayout>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>
